chore: update contents.

--- a/sections/certification.tex
+++ b/sections/certification.tex
@@ -1,10 +1,15 @@
 \section{Certifications}
 \resumeSubHeadingListStart
-
     \resumeSubheading
-    {Company Name 1}{Jan 20XX -- May 20XX}
-    {Software Engineer}{City, State}
+    {OTIS Japan Inc.}{Jun 2024}
+    {AppCon2023 Development Contest Certificate of Participation}{Philippines}
     \resumeSubheading
-    {Company Name 2}{May 20XX -- Aug 20XX}
-    {Software Engineer Intern}{City, State}
+    {Ateneo De Naga University}{Jun 2024}
+    {Smartbooks and Power BI Certificate of Completion}{Camarines Sur}
+    \resumeSubheading
+    {Ateneo De Naga University}{Oct 2022}
+    {SAP Business One DBMS for IT Certificate of Completion}{Camarines Sur}
+    \resumeSubheading
+    {Ateneo De Naga University}{Dec 2021}
+    {18th Place ADNU Freshmen Computer Programming Competition Certification of Achievement}{Camarines Sur}
 \resumeSubHeadingListEnd
