--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,21 +3,31 @@
 \resumeSubHeadingListStart
 
     \resumeSubheading
-    {Company Name 1}{Jan 20XX -- May 20XX}
-    {Software Engineer}{City, State}
+    {Ateneo De Naga University}{Jan 2024 -- Mar 2024}
+    {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Implemented microservices architecture using Node.js and Express, improving API response time by 25\% and reducing server load by 30\%.}
-        \resumeItem{Led a cross-functional team in implementing a new feature using React and Redux, resulting in a 20\% increase in user engagement within the first month.}
-        \resumeItem{Optimized MySQL database queries, reducing page load times by 15\% and enhancing overall application performance.}
+        \resumeItem{Developed the entire system -- RETSU, a web-based ticketing queueing system.}
     \resumeItemListEnd
     
     \resumeSubheading
-    {Company Name 2}{May 20XX -- Aug 20XX}
-    {Software Engineer Intern}{City, State}
+    {Department of Agriculture}{Sep 2022 -- Oct 2023}
+    {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Designed and implemented responsive user interfaces with Angular, leading to a 15\% improvement in user satisfaction scores.}
-        \resumeItem{Introduced automated testing processes with Jest and Enzyme, increasing test coverage by 30\% and reducing post-release defects by 25\%.}
-        \resumeItem{Contributed to the adoption of agile methodologies, utilizing Jira and Confluence, improving team productivity by 15\% through iterative development cycles.}
+        \resumeItem{Developed the entire system -- DAAMIA, weather informative website.}
+        \resumeItem{Optimized the API fetching process by 80\% efficiency allowing improvement in rendering pin markers on map view, drastically decreasing load time pages, and efficiency in data processing for the filter page.}
+        \resumeItem{Created a background service built using C\# WinForms for processing and handled storing 10,000+ records per day of real-time weather data per station into the AMIA database.}
+        \resumeItem{Implemented SMTP and enforced backend security for making API calls to mitigate any request overload to the server.}
+        \resumeItem{Implemented login/account features to DA-Tracking System i.e change password, account details on the page. Added editing (NCA) functionality to accounting pages and fixed bugs to the system's backend logic.}
+        \resumeItem{Enforced clean project architectural practices such as the Onion Architecture in .NET Framework utilizing dependency injection allowing for better code module modularization.}
+        \resumeItem{Implemented APIs, UI/UX design, data processing, and database configuration.}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {JubDesk}{May 2022 -- Aug 2022}
+    {Full-Stack Web Developer}{Australia}
+    \resumeItemListStart
+        \resumeItem{Developed new features resulting in workflow efficiency in the company’s HR management system.}
+        \resumeItem{Troubleshooted and fixed major issues on the system allowing the company to efficiently export detailed reports on their HR system.}
     \resumeItemListEnd
 
 \resumeSubHeadingListEnd
