--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -2,26 +2,57 @@
 \section{Projects}
 \resumeSubHeadingListStart
 
-    \resumeProjectHeading
-    {\textbf{Project Name 1} $|$ \emph{React.js, Angular, Vue.js, Django, Flask, Ruby on Rails}}    {}
+    \resumeSubheading
+    {ADNU HRIS}{Jun 2024 -- Dec 2024}
+    {Full-Stack Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
     \resumeItemListStart
-        \resumeItem {Led the development of a microservices-based e-commerce platform using Node.js, resulting in a 40\% increase in daily transactions within the first quarter.}
-        \resumeItem{Designed and deployed a scalable RESTful API using Django and Django REST Framework, achieving a 30\% improvement in data retrieval speed.}
-        \resumeItem{Implemented a real-time chat feature using WebSocket and Socket.io, enhancing user engagement and reducing response time by 20\%.}
+        \resumeItem{}
     \resumeItemListEnd
 
-    \resumeProjectHeading
-    {\textbf{Project Name 2} $|$ \emph{Spring Boot, Express.js, TensorFlow, PyTorch, jQuery, Bootstrap}}{}
+    \resumeSubheading
+    {ADNU RACER}{Jun 2024 -- Sep 2024}
+    {Backend Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
     \resumeItemListStart
-        \resumeItem{Developed a data visualization dashboard using D3.js, providing stakeholders with real-time insights and improving decision-making processes.}
-        \resumeItem{Built a CI/CD pipeline using Jenkins and Docker, reducing deployment time by 40\% and ensuring consistent and reliable releases.}
+        \resumeItem{}
     \resumeItemListEnd
 
-    \resumeProjectHeading
-    {\textbf{Project Name 3} $|$ \emph{Python, Flask, Jinja2, Firebase, Bootstrap}}{}
+    \resumeSubheading
+    {Dadsbol}{Apr 2024 -- May 2024}
+    {Lead Game Programmer}{Unity, C\#}
     \resumeItemListStart
-        \resumeItem{Contributed to an open-source project on GitHub, collaborating with a global community and achieving 500+ stars and 50 forks.}
-        \resumeItem{Implemented automated testing for a critical module using Selenium, reducing regression bugs by 30\% and ensuring a more stable release cycle.}
+        \resumeItem{}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {aiProof}{Mar 2024 -- May 2024}
+    {Mobile Developer}{Flutter, Dart, Firebase}
+    \resumeItemListStart
+        \resumeItem{}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {Feline Purrsuit}{Feb 2024 -- Mar 2024}
+    {Lead Game Programmer}{Unity, C\#}
+    \resumeItemListStart
+        \resumeItem{}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {STUBU.AI}{Oct 2023 -- Apr 2024}
+    {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
+    \resumeItemListStart
+        \resumeItem{An AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience. Reinventing the traditional education system.}
+        \resumeItem{Assisted on UI/UX Design.}
+        \resumeItem{Project Manager of the Frontend Team.}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {eBayan}{Sept 2023 -- Dec 2023}
+    {Mobile Developer}{Flutter, Dart, Firebase}
+    \resumeItemListStart
+        \resumeItem{An intuitive barangay-to-community mobile application for announcement creation management system.}
+        \resumeItem{Project Manager of the entire project. }
+        \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
     \resumeItemListEnd
 
 \resumeSubHeadingListEnd
