--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -2,8 +2,8 @@
 \section{Technical Skills}
     \begin{itemize}[leftmargin=0.15in, label={}]
 	\small{\item{
-		\textbf{Languages}{: Rust, Kotlin, Swift, Go, Scala, TypeScript, R, Perl, Haskell, Groovy, Julia, Dart} \\
-		\textbf{Technologies}{: React.js, Angular, Vue.js, Django, Flask, Ruby on Rails, Spring Boot, Express.js, TensorFlow, PyTorch, jQuery, Bootstrap, Laravel, Flask, ASP.NET, Node.js, Electron, Android SDK, iOS SDK, Symfony} \\
-		\textbf{Concepts}{: Compiler, Operating System, Virtual Memory, Cache Memory, Encryption, Decryption, Artificial Intelligence, Machine Learning, Neural Networks, API, Database Normalization, Agile Methodology, Cloud Computing}
+		\textbf{Languages}{: C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript} \\
+		\textbf{Technologies}{: Android SDK, ASP.NET, Bootstrap, Express.js, Figma, jQuery, Laravel, NodeJS, React, TailwindCSS} \\
+		\textbf{Concepts}{: Data Science, Game Development, Mobile Development, Software Development, Web Development}
 	}}
     \end{itemize}
