--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,9 +1,14 @@
 %-----------PROGRAMMING SKILLS-----------%
 \section{Technical Skills}
-    \begin{itemize}[leftmargin=0.15in, label={}]
-	\small{\item{
-		\textbf{Languages}{: C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript} \\
-		\textbf{Technologies}{: Android SDK, ASP.NET, Bootstrap, Express.js, Figma, jQuery, Laravel, NodeJS, React, TailwindCSS} \\
-		\textbf{Concepts}{: Data Science, Game Development, Mobile Development, Software Development, Web Development}
-	}}
-    \end{itemize}
+\resumeItemListStart
+		\resumeItem{Proficiency in various programming languages e.g., C, C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript.}
+		\resumeItem{Experience in Web/Mobile/Desktop application development technologies e.g., Android SDK, ASP.NET, Bootstrap, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
+		\resumeItem{Knowledge in Database languages and tools e.g., MySQL, MSSQL, Oracle, MongoDB, Firebase.}
+		\resumeItem{Well experienced in Operating Systems e.g., Windows and Linux.} 
+		\resumeItem{Proficiency in Version Control Tools (Git/GitHub/GitLab), FTP, Bash, Figma, Spline, Blender, Canva, Google Suites, MS Suites, LaTeX.}
+		\resumeItem{Experience in Technical Project Management on a pair or 8-man team.}
+		\resumeItem{Experience in working with small to large-scale application projects following clean architecture.}
+		\resumeItem{Strong Technical Adaptability on any topics or projects.}
+		\resumeItem{Strong experience in Application, UI/UX Design, Presentation, Collaboration, and Leadership.}
+		\resumeItem{Excellent communication skills and grasp of oral and written Tagalog/Bicol or English.}
+\resumeItemListEnd
