chore: update contents.

--- a/sections/certification.tex
+++ b/sections/certification.tex
@@ -1,15 +1,12 @@
 \section{Certifications}
-\resumeSubHeadingListStart
-    \resumeSubheading
-    {OTIS Japan Inc.}{Jun 2024}
-    {AppCon2023 Development Contest Certificate of Participation}{Philippines}
-    \resumeSubheading
-    {Ateneo De Naga University}{Jun 2024}
-    {Smartbooks and Power BI Certificate of Completion}{Camarines Sur}
-    \resumeSubheading
-    {Ateneo De Naga University}{Oct 2022}
-    {SAP Business One DBMS for IT Certificate of Completion}{Camarines Sur}
-    \resumeSubheading
-    {Ateneo De Naga University}{Dec 2021}
-    {18th Place ADNU Freshmen Computer Programming Competition Certification of Achievement}{Camarines Sur}
-\resumeSubHeadingListEnd
+    \resumeSubHeadingListStart
+        \resumeSubheading
+        {AppCon2023 Development Contest Certificate of Participation}{Jun 2024}
+        {OTIS Japan Inc.}{Philippines}
+        \resumeSubheading
+        {Smartbooks and Power BI Certificate of Completion}{Jun 2024}
+        {Ateneo De Naga University}{Camarines Sur}
+        \resumeSubheading
+        {SAP Business One DBMS for IT Certificate of Completion}{Oct 2022}
+        {Ateneo De Naga University}{Camarines Sur}
+    \resumeSubHeadingListEnd
