--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,7 +6,12 @@
     {Ateneo De Naga University}{Jan 2024 -- Mar 2024}
     {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Developed the entire system -- RETSU, a web-based ticketing queueing system.}
+        \resumeItem{Lead Developer for RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, optimizing the University's queueing problem by 90\% efficiency compared to traditional queueing.}
+        \resumeItem{Developed a comprehensive Queue Management System for the University Treasurer's Office; Integrated a QR code system for ticketing and a real-time queue status system.}
+        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework and Oracle 12c database that resulted for a generic system allowing different branches of ADNU to utilize and setup a Queueing System on their department Onsite Kiosk or Online.}
+        \resumeItem{Implemented APIs, UI/UX design, data processing, and database configuration.}
+        \resumeItem{Developed six (6) modules for the system -- Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
+        \resumeItem{Developed a comprehensive, efficient, and optimized reporting modules for admins to view and export.}
     \resumeItemListEnd
     
     \resumeSubheading
