--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -6,7 +6,9 @@
     {ADNU HRIS}{Jun 2024 -- Dec 2024}
     {Full-Stack Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
     \resumeItemListStart
-        \resumeItem{}
+        \resumeItem{Wrote clear documentation, diagrams, and communicated with key stakeholders and ADNU personnel.}
+        \resumeItem{Organized and enforced clean code architecture for the whole system; Created code and design templates for the team to follow.}
+        \resumeItem{Redesigned the ADNU-HR system and developed data migration plans.}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -20,7 +22,10 @@
     {Dadsbol}{Apr 2024 -- May 2024}
     {Lead Game Programmer}{Unity, C\#}
     \resumeItemListStart
-        \resumeItem{}
+        \resumeItem{Lead the development of the game; a physics-based 3D ragdoll power dodgeball game. that allowed the team to stay on track of the short deadline. Developed the game's core mechanics and gameplay; Designed the game's UI/UX.}
+        \resumeItem{Developed the game's AI and enforced project architecture through simulation tick-based event system that allowed for clean modularized code.}
+        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress.}
+        \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -41,9 +46,9 @@
     {STUBU.AI}{Oct 2023 -- Apr 2024}
     {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
     \resumeItemListStart
-        \resumeItem{An AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience. Reinventing the traditional education system.}
-        \resumeItem{Assisted on UI/UX Design.}
-        \resumeItem{Project Manager of the Frontend Team.}
+        \resumeItem{Lead front-end developer for STUBU.AI -- an AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience; Reinventing the traditional education system.}
+        \resumeItem{Assisted on UI/UX Design and made improvements to user experience (UX).}
+        \resumeItem{Lead the project management for the front-end team. Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
     \resumeItemListEnd
 
     \resumeSubheading
