--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -6,7 +6,7 @@
 		\resumeItem{Knowledge in Database languages and tools e.g., MySQL, MSSQL, Oracle, MongoDB, Firebase.}
 		\resumeItem{Well experienced in Operating Systems e.g., Windows and Linux.} 
 		\resumeItem{Proficiency in Version Control Tools (Git/GitHub/GitLab), FTP, Bash, Figma, Spline, Blender, Canva, Google Suites, MS Suites, LaTeX.}
-		\resumeItem{Experience in Technical Project Management on a pair or 8-man team.}
+		\resumeItem{Experience in Technical Project Management on a pair or small to mid-size group of team.}
 		\resumeItem{Experience in working with small to large-scale application projects following clean architecture.}
 		\resumeItem{Strong Technical Adaptability on any topics or projects.}
 		\resumeItem{Strong experience in Application, UI/UX Design, Presentation, Collaboration, and Leadership.}
