--- a/cv.tex
+++ b/cv.tex
@@ -62,7 +62,9 @@
 \input{sections/experience}      % Import the experience section
 \input{sections/projects}        % Import the projects section
 \input{sections/certification}   % Import the certification section
+\input{sections/achievements.tex}% Import the certification section
 \input{sections/skills.tex}      % Import the skills section
 \input{sections/education.tex}   % Import the education section
+\input{sections/references.tex}  % Import the education section
 
 \end{document}
