--- a/sections/heading.tex
+++ b/sections/heading.tex
@@ -3,6 +3,6 @@
     \textbf{\Huge \scshape Johcel Gene T. Bitara} \\ \vspace{1pt}
     \seticon{faPhone} \ \small 0970 322 4661 \quad
     \href{mailto:genebitara@gmail.com}{\seticon{faInbox} \underline{genebitara@gmail.com}} \quad
-    \href{https://www.linkedin.com/in/johcel-gene-bitara-a413b9283}{\seticon{faLinkedin} \underline{linkedin.com/johcel-gene-bitara}} \quad
-    \href{https://github.com/genebit}{\seticon{faGithub} \underline{github.com/genebit}}
+    \href{https://www.linkedin.com/in/johcel-gene-bitara-a413b9283}{\seticon{faLinkedin} \underline{LinkedIn}} \quad
+    \href{https://github.com/genebit}{\seticon{faGithub} \underline{GitHub}}
 \end{center}
