chore: updated contents.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -15,31 +15,8 @@
     {ADNU RACER}{Jun 2024 -- Sep 2024}
     {Backend Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
     \resumeItemListStart
-        \resumeItem{}
-    \resumeItemListEnd
-
-    \resumeSubheading
-    {Dadsbol}{Apr 2024 -- May 2024}
-    {Lead Game Programmer}{Unity, C\#}
-    \resumeItemListStart
-        \resumeItem{Lead the development of the game; a physics-based 3D ragdoll power dodgeball game. that allowed the team to stay on track of the short deadline. Developed the game's core mechanics and gameplay; Designed the game's UI/UX.}
-        \resumeItem{Developed the game's AI and enforced project architecture through simulation tick-based event system that allowed for clean modularized code.}
-        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress.}
-        \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
-    \resumeItemListEnd
-
-    \resumeSubheading
-    {aiProof}{Mar 2024 -- May 2024}
-    {Mobile Developer}{Flutter, Dart, Firebase}
-    \resumeItemListStart
-        \resumeItem{}
-    \resumeItemListEnd
-
-    \resumeSubheading
-    {Feline Purrsuit}{Feb 2024 -- Mar 2024}
-    {Lead Game Programmer}{Unity, C\#}
-    \resumeItemListStart
-        \resumeItem{}
+        \resumeItem{Contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
+        \resumeItem{Contributed to creating system privileges and roles to ensure access control and data security to the system.}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -52,12 +29,29 @@
     \resumeItemListEnd
 
     \resumeSubheading
+    {aiProof}{Mar 2024 -- May 2024}
+    {Mobile Developer}{Flutter, Dart, Firebase}
+    \resumeItemListStart
+        \resumeItem{}
+    \resumeItemListEnd
+
+    \resumeSubheading
     {eBayan}{Sept 2023 -- Dec 2023}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
         \resumeItem{An intuitive barangay-to-community mobile application for announcement creation management system.}
         \resumeItem{Project Manager of the entire project. }
         \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
+    \resumeItemListEnd
+
+    \resumeSubheading
+    {Dadsbol}{Apr 2024 -- May 2024}
+    {Lead Game Programmer}{Unity, C\#}
+    \resumeItemListStart
+        \resumeItem{Lead the development of the game; a physics-based 3D ragdoll power dodgeball game. that allowed the team to stay on track of the short deadline. Developed the game's core mechanics and gameplay; Designed the game's UI/UX.}
+        \resumeItem{Developed the game's AI and enforced project architecture through simulation tick-based event system that allowed for clean modularized code.}
+        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress.}
+        \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
     \resumeItemListEnd
 
 \resumeSubHeadingListEnd
