--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,22 +3,25 @@
 \resumeSubHeadingListStart
 
     \resumeSubheading
-    {Ateneo De Naga University}{Jan 2024 -- Mar 2024}
+    {Ateneo De Naga University (RETSU)}{Jan 2024 -- Mar 2024}
     {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Lead Developer for RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, optimizing the University's queueing problem by 90\% efficiency compared to traditional queueing.}
-        \resumeItem{Developed a comprehensive Queue Management System for the University Treasurer's Office; Integrated a QR code system for ticketing and a real-time queue status system.}
-        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework and Oracle 12c database that resulted for a generic system allowing different branches of ADNU to utilize and setup a Queueing System on their department Onsite Kiosk or Online.}
+        \resumeItem{Developed RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, significantly enhancing the user experience by reducing queueing delays and minimizing the inconveniences associated with traditional queueing systems.}
+        \resumeItem{Developed a comprehensive Queue Management System for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, customizable interface through admin management.}
+        \resumeItem{Optimized fetching of data from the database by 90\% efficiency, allowing the system to handle optimized page loads of up to 24,000+ records per day.}
+        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework with Oracle database that resulted for a generic system allowing different branches/departments of ADNU to utilize and setup a Queueing System on their department Onsite Kiosk or Online.}
         \resumeItem{Implemented APIs, UI/UX design, data processing, and database configuration.}
-        \resumeItem{Developed six (6) modules for the system -- Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
+        \resumeItem{Developed six (6) critical modules for the system -- Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
         \resumeItem{Developed a comprehensive, efficient, and optimized reporting modules for admins to view and export.}
+        \resumeItem{Independently developed the system within a stringent two-month development and deployment timeframe with a five-month maintenance, adhering to strict deadlines and managing time-sensitive pressures.}
+        \resumeItem{Conducted a comprehensive testing phase, prototyping and feedback, and facilitated onboarding for counter staff to ensure smooth adoption and operational efficiency.}
     \resumeItemListEnd
     
     \resumeSubheading
-    {Department of Agriculture}{Sep 2022 -- Oct 2023}
+    {Department of Agriculture (DAAMIA)}{Sep 2022 -- Oct 2023}
     {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Developed the entire system -- DAAMIA, weather informative website.}
+        \resumeItem{Developed the entire system -- DAAMIA, a weather informative website.}
         \resumeItem{Optimized the API fetching process by 80\% efficiency allowing improvement in rendering pin markers on map view, drastically decreasing load time pages, and efficiency in data processing for the filter page.}
         \resumeItem{Created a background service built using C\# WinForms for processing and handled storing 10,000+ records per day of real-time weather data per station into the AMIA database.}
         \resumeItem{Implemented SMTP and enforced backend security for making API calls to mitigate any request overload to the server.}
