chore: updated contents.

--- a/sections/certification.tex
+++ b/sections/certification.tex
@@ -1,12 +1,18 @@
 \section{Certifications}
     \resumeSubHeadingListStart
         \resumeSubheading
-        {AppCon2023 Development Contest Certificate of Participation}{Jun 2024}
-        {OTIS Japan Inc.}{Philippines}
-        \resumeSubheading
         {Smartbooks and Power BI Certificate of Completion}{Jun 2024}
         {Ateneo De Naga University}{Camarines Sur}
         \resumeSubheading
         {SAP Business One DBMS for IT Certificate of Completion}{Oct 2022}
         {Ateneo De Naga University}{Camarines Sur}
+    \resumeSubHeadingListEnd
+\section{Certificates}
+    \resumeSubHeadingListStart
+        \resumeSubheading
+        {AppCon2023 Development Contest Certificate of Participation}{Jun 2024}
+        {OTIS Japan Inc.}{Philippines}
+        \resumeSubheading
+        {JPCIS ITalks: Ethical Hacking}{Oct 2024}
+        {Divine World College of Calapan}{Philippines}
     \resumeSubHeadingListEnd
