--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,14 +1,15 @@
 %-----------PROGRAMMING SKILLS-----------%
 \section{Technical Skills}
 \resumeItemListStart
-		\resumeItem{Proficiency in various programming languages e.g., C, C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript.}
-		\resumeItem{Experience in Web/Mobile/Desktop application development technologies e.g., Android SDK, ASP.NET, Bootstrap, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
+		\resumeItem{Knowledge in various programming languages e.g., C, C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript.}
 		\resumeItem{Knowledge in different databases and tools e.g., MySQL, MSSQL, Oracle, MongoDB, Firebase.}
+		\resumeItem{Knowledge in Cloud Computing Platforms e.g., DigitalOcean and Google Cloud Platform.}
+		\resumeItem{Experience in Web/Mobile/Desktop application development technologies e.g., Android SDK, ASP.NET, Bootstrap, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
 		\resumeItem{Well experienced in different Operating Systems (OS) e.g., Windows and Linux.} 
 		\resumeItem{Proficiency in various development tools e.g., FTP, Bash, Figma, Spline, Blender, Canva, Google Suites, MS Suites, LaTeX, and version control Tools i.e., Git/GitHub/GitLab.}
-		\resumeItem{Experience in Technical Project Management on a pair or small to mid-size group of team.}
+		\resumeItem{Experience in technical project management on a pair or small to mid-size group of team.}
 		\resumeItem{Experience in working with small to large-scale application projects following or enforcing clean code architecture.}
-		\resumeItem{Strong Technical Adaptability on any software to hardware related topics or projects.}
+		\resumeItem{Strong technical adaptability on any software to hardware related topics or projects.}
 		\resumeItem{Strong experience in Application, UI/UX Design, Presentation, Collaboration, and Leadership.}
-		\resumeItem{Excellent communication skills and grasp of oral and written Tagalog/Bicol or English.}
+		\resumeItem{Excellent communication skills and grasp of oral and written Tagalog, Bicol or English.}
 \resumeItemListEnd
