--- a/sections/education.tex
+++ b/sections/education.tex
@@ -7,7 +7,7 @@
     {Bachelor of Science in Information Technology (GPA: 4.00 / 4.00)}{Naga City, Camarines Sur, 4400}
     % create a bullet list
     \begin{itemize}
-        \item[] \textbf{Relevant Coursework:} Introduction to Computing, Fundamentals of Programming (C++), Discrete Mathematics for IT Professionals, Intermediate Programming (C/C++), Quantitative Methods with Simulation and Modeling, Data Structures and Algorithms (C++), Information Management (Oracle), Human Computer Interaction, Computer Networking I (Cisco), Object-Oriented Programming (OOP), Trends in Application Development, Operating Systems (C), Advanced Database Systems (Oracle), Integrative Programming and Technologies I (R), Computer Networking 2 (Cisco), Platform Technologies, Technopreneurship for IT Professionals, 2D Game Development, Integrative Programming and Technologies II (Flutter), Infromation Assurance and Security I, Web Systems and Technologies, Systems Administration and Maintenance, Systems Integration and Architecture for IT Professionals, Quality Management, Information Assurance and Security II, UI/UX Design, Mobile Computing and Communication (Flutter).
+        \item[] \textbf{Relevant Coursework:} Introduction to Computing, Fundamentals of Programming (C++), Discrete Mathematics for IT Professionals, Intermediate Programming (C/C++), Quantitative Methods with Simulation and Modeling, Data Structures and Algorithms (C++), Information Management (Oracle), Human Computer Interaction, Computer Networking I (Cisco), Object-Oriented Programming (OOP), Trends in Application Development, Operating Systems (C), Advanced Database Systems (Oracle), Integrative Programming and Technologies I (R), Computer Networking 2 (Cisco), Platform Technologies, Technopreneurship for IT Professionals, 2D Game Development, Integrative Programming and Technologies II (Flutter), Infromation Assurance and Security I, Web Systems and Technologies, Systems Administration and Maintenance, Systems Integration and Architecture for IT Professionals, Quality Management, Information Assurance and Security II, UI/UX Design, Mobile Computing and Communication (Flutter). IT Capstone 1 and 2. IT Senior Practicum (486 Hours).
     \end{itemize}
 
     \resumeSubHeadingListEnd
