chore: updated contents.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,10 +7,10 @@
     {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
         \resumeItem{Developed RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, significantly enhancing the user experience by reducing queueing delays and minimizing the inconveniences associated with traditional queueing systems.}
-        \resumeItem{Developed a comprehensive Queue Management System for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, customizable interface through admin management.}
-        \resumeItem{Optimized fetching of data from the database by 90\% efficiency, allowing the system to handle optimized page loads of up to 24,000+ records per day.}
-        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework with Oracle database that resulted for a generic system allowing different branches/departments of ADNU to utilize and setup a Queueing System on their department Onsite Kiosk or Online.}
-        \resumeItem{Implemented APIs, UI/UX design, data processing, and database configuration.}
+        \resumeItem{Developed a comprehensive Queueing Management System for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, customizable interface through admin management.}
+        \resumeItem{Optimized fetching of data from Oracle database by 90\% efficiency, allowing the system to handle optimized page loads of up to 24,000+ records per day.}
+        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework with Oracle database that resulted for a generic system allowing different branches, departments, and universities to utilize and setup a Queueing System Onsite Kiosk or Online.}
+        \resumeItem{Implementing and wrote secured APIs, UI/UX design, data processing, and database configuration.}
         \resumeItem{Developed six (6) critical modules for the system -- Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
         \resumeItem{Developed a comprehensive, efficient, and optimized reporting modules for admins to view and export.}
         \resumeItem{Independently developed the system within a stringent two-month development and deployment timeframe with a five-month maintenance, adhering to strict deadlines and managing time-sensitive pressures.}
