chore: updated contents.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -4,7 +4,7 @@
 
     \resumeSubheading
     {ADNU HRIS}{Jun 2024 -- Dec 2024}
-    {Full-Stack Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
+    {Full-Stack Web Developer}{Laravel 9/10, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
     \resumeItemListStart
         \resumeItem{Wrote clear documentation, diagrams, and communicated with key stakeholders and ADNU personnel.}
         \resumeItem{Organized and enforced clean code architecture for the whole system; Created code and design templates for the team to follow.}
@@ -13,7 +13,7 @@
 
     \resumeSubheading
     {ADNU RACER}{Jun 2024 -- Sep 2024}
-    {Backend Web Developer}{Laravel, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
+    {Backend Developer/Database Designer}{Oracle}
     \resumeItemListStart
         \resumeItem{Contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
         \resumeItem{Contributed to creating system privileges and roles to ensure access control and data security to the system.}
