chore: updated contents.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,16 +1,6 @@
-%-----------PROJECTS-----------%
 \section{Projects}
+
 \resumeSubHeadingListStart
-
-    \resumeSubheading
-    {ADNU HRIS}{Jun 2024 -- Dec 2024}
-    {Full-Stack Web Developer}{Laravel 9/10, Livewire, Vite, TailwindCSS, NodeJS, Oracle}
-    \resumeItemListStart
-        \resumeItem{Wrote clear documentation, diagrams, and communicated with key stakeholders and ADNU personnel.}
-        \resumeItem{Organized and enforced clean code architecture for the whole system; Created code and design templates for the team to follow.}
-        \resumeItem{Redesigned the ADNU-HR system and developed data migration plans.}
-    \resumeItemListEnd
-
     \resumeSubheading
     {ADNU RACER}{Jun 2024 -- Sep 2024}
     {Backend Developer/Database Designer}{Oracle}
@@ -18,32 +8,39 @@
         \resumeItem{Contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
         \resumeItem{Contributed to creating system privileges and roles to ensure access control and data security to the system.}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {STUBU.AI}{Oct 2023 -- Apr 2024}
     {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
     \resumeItemListStart
-        \resumeItem{Lead front-end developer for STUBU.AI -- an AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience; Reinventing the traditional education system.}
+        \resumeItem{Lead front-end developer for STUBU.AI -- an AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience; reinventing the traditional education system.}
         \resumeItem{Assisted on UI/UX Design and made improvements to user experience (UX).}
-        \resumeItem{Lead the project management for the front-end team. Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
+        \resumeItem{Lead the project management for the front-end team consisting of four (4) developers and conducted SCRUM meetings for the group.}
+        \resumeItem{Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
+        \resumeItem{Conducted code reviews to the team developers and provided technical documentations upon submission for Appcon 2023}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {aiProof}{Mar 2024 -- May 2024}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
-        \resumeItem{}
+        \resumeItem{Lead Project Manager of a two-person project.}
+        \resumeItem{A convenient mobile application tool for scanning and AI proofing written documents.}
+        \resumeItem{Developed core features of the applications e.g., OCR, statistics, and home page.}
+        \resumeItem{Configured and setup back-end requirements for the Rapid API Integration for AI proofing.}
+        \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {eBayan}{Sept 2023 -- Dec 2023}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
         \resumeItem{An intuitive barangay-to-community mobile application for announcement creation management system.}
-        \resumeItem{Project Manager of the entire project. }
-        \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
+        \resumeItem{Project manager of the entire project of a two-person project.}
+        \resumeItem{Developed core features of the application e.g., management system, authentication, and back-end configuration to google services -- firebase, firestore, and firebase authentication.}
+        \resumeItem{UI/UX engineer responsible for developing responsive and custom made design for an overall user experience.}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Dadsbol}{Apr 2024 -- May 2024}
     {Lead Game Programmer}{Unity, C\#}
@@ -53,5 +50,4 @@
         \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress.}
         \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
     \resumeItemListEnd
-
 \resumeSubHeadingListEnd
