--- a/sections/references.tex
+++ b/sections/references.tex
@@ -1,35 +1,35 @@
 \section{References}
-    \resumeSubHeadingListStart
-        \resumeSubheading
-        {Joshua C. Martinez, MIT}{Ateneo De Naga University}
-        {Chief Information Technology Officer}{Naga City, Camarines Sur, 4400}
-        \resumeItemListStart
-            \resumeItem{Phone: +(63) 900-000-0000}
-            \resumeItem{Email: joshuamartinez@gbox.adnu.edu.ph}
-        \resumeItemListEnd
-        
-        \resumeSubheading
-        {Prof. Estrella H. Montealegre}{Ateneo De Naga University}
-        {Management Information Systems, Director}{Naga City, Camarines Sur, 4400}
-        \resumeItemListStart
-            \resumeItem{Phone: +(63) 918-926-6712}
-            \resumeItem{Email: emontealegre@gbox.adnu.edu.ph}
-        \resumeItemListEnd
 
-        \resumeSubheading
-        {Ryan Jay D. Rosano}{Ateneo De Naga University}
-        {Information System Administrator}{Naga City, Camarines Sur, 4400}
-        \resumeItemListStart
-            \resumeItem{Phone: +(63) 900-000-0000}
-            \resumeItem{Email: rrosano@gbox.adnu.edu.ph}
-        \resumeItemListEnd
-        
-        \resumeSubheading
-        {Andrew Coros}{Freelancer}
-        {Full-Stack Web Developer}{San Fernando, Camarines Sur, 4400}
-        \resumeItemListStart
-            \resumeItem{Phone: +(63) 916 560 3013}
-            \resumeItem{Email: corosdrew11@gmail.com}
-        \resumeItemListEnd
-    
-    \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+    \resumeSubheading
+    {Joshua C. Martinez, MIT}{Ateneo de Naga University}
+    {Chief Information Technology Officer}{Naga City, Camarines Sur, 4400}
+    \resumeItemListStart
+        \resumeItem{Phone: +(63) 900-000-0000}
+        \resumeItem{Email: joshuamartinez@gbox.adnu.edu.ph}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Prof. Estrella H. Montealegre}{Ateneo de Naga University}
+    {Management Information Systems, Director}{Naga City, Camarines Sur, 4400}
+    \resumeItemListStart
+        \resumeItem{Phone: +(63) 918-926-6712}
+        \resumeItem{Email: emontealegre@gbox.adnu.edu.ph}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Ryan Jay D. Rosano}{Ateneo de Naga University}
+    {Information System Administrator}{Naga City, Camarines Sur, 4400}
+    \resumeItemListStart
+        \resumeItem{Phone: +(63) 900-000-0000}
+        \resumeItem{Email: rrosano@gbox.adnu.edu.ph}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Andrew Coros}{Freelancer}
+    {Full-Stack Web Developer}{San Fernando, Camarines Sur, 4400}
+    \resumeItemListStart
+        \resumeItem{Phone: +(63) 916-560-3013}
+        \resumeItem{Email: corosdrew11@gmail.com}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
