--- a/sections/achievements.tex
+++ b/sections/achievements.tex
@@ -1,19 +1,19 @@
 \section{Achievements}
-    \resumeSubHeadingListStart
+
+\resumeSubHeadingListStart
     \resumeSubheading
     {Idea2Startup Fund Awardee}{Dec 2024}
     {City of Naga}{Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Pitched the application STUBU.AI, an adaptive study-buddy web application designed to help learners study with a personalized learning environment. Pitched the application to the Local Government Unit (LGU) of Naga City for the Idea2Startup program.}
-        \resumeItem{Secured a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
+        \resumeItem{Pitched the application STUBU.AI, an adaptive study-buddy web application designed to help learners study with a personalized learning environment. Pitched the application to the Local Government Unit (LGU) of Naga City for the Idea2Startup program.} 
+        \resumeItem{Managed to be among one of the final list of startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Freshmen Computer Programming Competition Certificate of Achievement}{Dec 2021}
-    {Ateneo De Naga University}{Camarines Sur}
+    {Ateneo de Naga University}{Camarines Sur}
     \resumeItemListStart
         \resumeItem{18th Place among 97 freshmen participants.}
         \resumeItem{Thrived in a high-pressure environment, solving intricate problems within strict timeframes.}
     \resumeItemListEnd
-
 \resumeSubHeadingListEnd
