--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,41 +1,55 @@
-%-----------EXPERIENCE-----------%
 \section{Work Experience}
-\resumeSubHeadingListStart
 
+\resumeSubHeadingListStart
     \resumeSubheading
-    {Ateneo De Naga University (RETSU)}{Jan 2024 -- Mar 2024}
-    {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    {Ateneo de Naga University -- Project HRIS (Phase 1 and 2)}{June 2024 -- Present}
+    {Contract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Developed RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, significantly enhancing the user experience by reducing queueing delays and minimizing the inconveniences associated with traditional queueing systems.}
-        \resumeItem{Developed a comprehensive Queueing Management System for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, customizable interface through admin management.}
-        \resumeItem{Optimized fetching of data from Oracle database by 90\% efficiency, allowing the system to handle optimized page loads of up to 24,000+ records per day.}
-        \resumeItem{Enforced clean project architectural practices i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using Laravel 9 framework with Oracle database that resulted for a generic system allowing different branches, departments, and universities to utilize and setup a Queueing System Onsite Kiosk or Online.}
-        \resumeItem{Implementing and wrote secured APIs, UI/UX design, data processing, and database configuration.}
-        \resumeItem{Developed six (6) critical modules for the system -- Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
-        \resumeItem{Developed a comprehensive, efficient, and optimized reporting modules for admins to view and export.}
-        \resumeItem{Independently developed the system within a stringent two-month development and deployment timeframe with a five-month maintenance, adhering to strict deadlines and managing time-sensitive pressures.}
-        \resumeItem{Conducted a comprehensive testing phase, prototyping and feedback, and facilitated onboarding for counter staff to ensure smooth adoption and operational efficiency.}
+        \resumeItem{Lead developer for HRIS: a new web portal for Ateneo de Naga University's HRMO. Handled confidential access to HR records from the University's database with careful measures in place.}
+        \resumeItem{Communicated with key stakeholders--HRMO and MIS. Identified user requirements and conducted an analysis of the pre-existing legacy HR system of the University.}
+        \resumeItem{Enforced clean project architectural practices, i.e., Model-View-Controller (MVC) with added custom layered repository pattern approach for better code modularization.}
+        \resumeItem{Co-designed the conceptual Entity-Relationship Diagram (ERD) for the new HR schema in Oracle.}
+        \resumeItem{Co-designed the website's UI/UX and was responsible for developing a responsive and custom-made design for an overall user experience.}
+        \resumeItem{Developed 31 over 43 key modules of the application i.e., web portal authentication, user privilege access control, employee/personal information, reports and contracts generation, query builder data extraction, employee designations, DTR scanner with RFID connection, faculty, leave, attendance, and work schedule management, all of which have resulted in a drastic improvements to the HR's workflow in terms of eliminating the manual processes and communication with other systems.}
+        \resumeItem{Applied optimization practices to key modules, both front-end and back-end, for rendering thousands of records and fetching employee records.}
+        \resumeItem{Applied optimization practices at a database level in the Oracle HR schema that include the usage of optimized PL/SQL queries, views, procedures, indexing, and functions.}
+        \resumeItem{Crafted and applied a concrete data migration plan to perform a large-scale migration of up to 3 million records from different database sources -- from MySQL and Postgre to Oracle, resulting in unified data records of HRMO in the main database repository of the University.}
+        \resumeItem{Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
+        \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback to HRMO, and facilitated onboarding for HR officers to ensure smooth adoption and operational efficiency. Presented the data migration results to HRMO for future decision-making.}
     \resumeItemListEnd
-    
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
-    {Department of Agriculture (DAAMIA)}{Sep 2022 -- Oct 2023}
-    {Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
+    {Contract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
-        \resumeItem{Developed the entire system -- DAAMIA, a weather informative website.}
-        \resumeItem{Optimized the API fetching process by 80\% efficiency allowing improvement in rendering pin markers on map view, drastically decreasing load time pages, and efficiency in data processing for the filter page.}
-        \resumeItem{Created a background service built using C\# WinForms for processing and handled storing 10,000+ records per day of real-time weather data per station into the AMIA database.}
+        \resumeItem{Developed RETSU (Refined Electronic Ticketing for Streamlining User Experience) at Ateneo de Naga University, which enhanced the user experience by reducing queue delays and minimizing the inconveniences associated with traditional queuing systems.}
+        \resumeItem{Developed a comprehensive queue management system for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, with customizable controls through admin management.}
+        \resumeItem{Applied optimization practices to both front-end, back-end, and database by use of optimized SQL queries and implementation for handling thousands of records to the back-end along with optimization for the client to render thousands of transactions that resulted in 84\% efficiency, allowing the system to handle page loads with up to 26,000 above transactions per branch without slowdown in filtering records.}
+        \resumeItem{Enforced clean project architectural practices, i.e., Model-View-Controller (MVC) for better code modularization. Developed a scalable system using the Laravel 9 framework with an Oracle database that resulted in a generic system allowing different branches, departments, and universities to utilize and set up a Queueing System Onsite Kiosk or Online.}
+        \resumeItem{Implementing and writing secure APIs, UI/UX design, data processing, and database configuration.}
+        \resumeItem{Developed six (6) critical modules for the system: Company Admin, Branch Admin, Staff/Counters, Kiosk, Online Kiosk, and Real-time Monitor View.}
+        \resumeItem{Developed comprehensive, efficient, and optimized reporting modules for admins to view and export.}
+        \resumeItem{Developed the system within a stringent two-month development and deployment timeframe, followed by a five-month maintenance period, while adhering to strict deadlines and managing time-sensitive pressures.}
+        \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback, and facilitated onboarding for counter staff to ensure smooth adoption and operational efficiency.}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Department of Agriculture -- Project DAAMIA}{Sep 2022 -- Oct 2023}
+    {Subcontract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    \resumeItemListStart
+        \resumeItem{Developed the entire system -- DAAMIA, a weather information website.}
+        \resumeItem{Optimized the API fetching process to achieve 80\% efficiency, which improved the rendering of pin markers on the map view, reduced the load time of pages, and enhanced data processing for the filter page.}
+        \resumeItem{Created a background service built using C\# WinForms for processing and handling the storage of 10,000+ records per day of real-time weather data per station into the AMIA database.}
         \resumeItem{Implemented SMTP and enforced backend security for making API calls to mitigate any request overload to the server.}
-        \resumeItem{Implemented login/account features to DA-Tracking System i.e change password, account details on the page. Added editing (NCA) functionality to accounting pages and fixed bugs to the system's backend logic.}
-        \resumeItem{Enforced clean project architectural practices such as the Onion Architecture in .NET Framework utilizing dependency injection allowing for better code module modularization.}
+        \resumeItem{Enforced clean project architectural practices such as the Onion Architecture in .NET Framework utilizing dependency injection, separation of entities, infrastructure, and web, allowing for better code module modularization.}
         \resumeItem{Implemented APIs, UI/UX design, data processing, and database configuration.}
     \resumeItemListEnd
-
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {JubDesk}{May 2022 -- Aug 2022}
-    {Full-Stack Web Developer}{Australia}
+    {Subcontract • Full-Stack Web Developer}{Australia}
     \resumeItemListStart
         \resumeItem{Developed new features resulting in workflow efficiency in the company’s HR management system.}
-        \resumeItem{Troubleshooted and fixed major issues on the system allowing the company to efficiently export detailed reports on their HR system.}
+        \resumeItem{Troubleshooted and fixed major issues in the system, which enabled the company to export detailed reports on its HR system with efficiency.}
     \resumeItemListEnd
-
 \resumeSubHeadingListEnd
