--- a/sections/heading.tex
+++ b/sections/heading.tex
@@ -1,8 +1,7 @@
-%----------HEADING----------%
 \begin{center}
     \textbf{\Huge \scshape Johcel Gene T. Bitara} \\ \vspace{1pt}
     \seticon{faPhone} \ \small 0970 322 4661 \quad
     \href{mailto:genebitara@gmail.com}{\seticon{faInbox} \underline{genebitara@gmail.com}} \quad
-    \href{https://www.linkedin.com/in/johcel-gene-bitara-a413b9283}{\seticon{faLinkedin} \underline{LinkedIn}} \quad
-    \href{https://github.com/genebit}{\seticon{faGithub} \underline{GitHub}}
+    \href{https://www.linkedin.com/in/johcel-gene-bitara-a413b9283}{\seticon{faLinkedin} \underline{linkedin.com/in/johcel-gene-bitara-a413b9283}} \quad
+    \href{https://github.com/genebit}{\seticon{faGithub} \underline{github.com/genebit}}
 \end{center}
