--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,8 +5,8 @@
     {ADNU RACER}{Jun 2024 -- Sep 2024}
     {Backend Developer/Database Designer}{Oracle}
     \resumeItemListStart
-        \resumeItem{Contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
-        \resumeItem{Contributed to creating system privileges and roles to ensure access control and data security to the system.}
+        \resumeItem{Voluntarily contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
+        \resumeItem{Voluntarily contributed to creating system privileges and roles to ensure access control and data security to the system.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
